--- a/styles/catalogo/home.module.css
+++ b/styles/catalogo/home.module.css
@@ -46,7 +46,7 @@
     flex-direction: column;
     gap: 15px;
     padding: 15px;
-    margin-bottom: 0px;
+    padding: 0 5px; 
   }
 
   .featuredSection,
